--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
   <a-scene embedded arjs>
-    <!-- Video Plane -->
-    <a-video 
-      src="#video"
-      position="0 1 -3" 
-      rotation="0 0 0" 
-      width="4" 
-      height="2.25">
-    </a-video>
+    <!-- AR Marker (Hiro Marker) -->
+    <a-marker preset="hiro">
+      <!-- Video Plane -->
+      <a-video 
+        src="#video"
+        position="0 1 -3" 
+        rotation="0 0 0" 
+        width="4" 
+        height="2.25">
+      </a-video>
+    </a-marker>
     
-    <!-- Video Source -->
+    <!-- Assets -->
     <a-assets>
       <video id="video" autoplay loop="true" src="tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
   </a-scene>
 </body>
 </html>
-
