--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <!-- Assets -->
     <a-assets>
-      <video id="video" autoplay loop="true" src="tunicates.mp4" crossorigin="anonymous"></video>
+      <video id="video" autoplay loop="true" src=“tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
   </a-scene>
 </body>
