--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
   <a-scene embedded arjs>
-    <!-- AR Marker (Hiro Marker) -->
+    <!-- Marker-based AR -->
     <a-marker preset="hiro">
-      <!-- Video Plane -->
+      <!-- Video Plane that will appear when marker is detected -->
       <a-video 
-        src="#video"
+        src="#video" 
         position="0 1 -3" 
         rotation="0 0 0" 
         width="4" 
         height="2.25">
       </a-video>
     </a-marker>
-    
-    <!-- Assets -->
+
+    <!-- Video Source (Make sure this video is in your repository) -->
     <a-assets>
-      <video id="video" autoplay loop="true" src=“tunicates.mp4" crossorigin="anonymous"></video>
+      <video id="video" autoplay loop="true" src="tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
+
+    <!-- Camera -->
+    <a-camera></a-camera>
   </a-scene>
 </body>
 </html>
