--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
   <a-scene embedded arjs>
-    <!-- Marker-based AR -->
+    <!-- Marker-based AR with Hiro marker -->
     <a-marker preset="hiro">
-      <!-- YouTube Video Embed -->
-      <a-entity 
-        geometry="primitive: plane; width: 4; height: 2.25" 
+      <!-- Plane to display the YouTube video -->
+      <a-plane 
+        width="4" 
+        height="2.25" 
         position="0 1 -3" 
-        material="shader: html; target: #youtube-embed">
-      </a-entity>
+        material="shader: html; target: #youtube-embed;">
+      </a-plane>
     </a-marker>
 
-    <!-- YouTube Video Source (Iframe embedded) -->
+    <!-- YouTube Video Source using iframe -->
     <a-assets>
-      <iframe id="youtube-embed" src="https://www.youtube.com/embed/9ROD-eBCMB8?autoplay=1" frameborder="0" allowfullscreen="true"></iframe>
+      <html>
+        <iframe id="youtube-embed" 
+                width="100%" 
+                height="100%" 
+                src="https://www.youtube.com/embed/9ROD-eBCMB8?autoplay=1" 
+                frameborder="0" 
+                allowfullscreen="true"></iframe>
+      </html>
     </a-assets>
 
     <!-- Camera -->
