--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
       </html>
     </a-assets>
 
-    <!-- Camera -->
-    <a-camera></a-camera>
+    <!-- Camera setup -->
+    <a-camera 
+      position="0 0 0" 
+      look-controls="enabled: true;" 
+      active="true">
+    </a-camera>
   </a-scene>
 </body>
 </html>
