--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Passthrough AR with YouTube Video</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.2.1/aframe/build/aframe-ar.min.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.2.1/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
-  <a-scene embedded arjs>
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
     <!-- Marker-based AR with Hiro marker -->
     <a-marker preset="hiro">
       <!-- Plane to display the YouTube video -->
@@ -33,7 +33,7 @@
       </html>
     </a-assets>
 
-    <!-- Camera setup -->
+    <!-- Camera setup (AR.js integrated) -->
     <a-camera 
       position="0 0 0" 
       look-controls="enabled: true;" 
