--- a/index.html
+++ b/index.html
@@ -3,42 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Passthrough AR with YouTube Video</title>
+  <title>Passthrough AR with Video</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.2.1/aframe/build/aframe-ar.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.2.1/aframe/build/aframe-ar.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
-    <!-- Marker-based AR with Hiro marker -->
+  <a-scene embedded arjs>
+    <!-- Marker-based AR -->
     <a-marker preset="hiro">
-      <!-- Plane to display the YouTube video -->
-      <a-plane 
-        width="4" 
-        height="2.25" 
+      <!-- Video Plane that will appear when marker is detected -->
+      <a-video 
+        src="#video" 
         position="0 1 -3" 
-        material="shader: html; target: #youtube-embed;">
-      </a-plane>
+        rotation="0 0 0" 
+        width="4" 
+        height="2.25">
+      </a-video>
     </a-marker>
 
-    <!-- YouTube Video Source using iframe -->
+    <!-- Video Source -->
     <a-assets>
-      <html>
-        <iframe id="youtube-embed" 
-                width="100%" 
-                height="100%" 
-                src="https://www.youtube.com/embed/9ROD-eBCMB8?autoplay=1" 
-                frameborder="0" 
-                allowfullscreen="true"></iframe>
-      </html>
+      <video id="video" autoplay loop="true" src="tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
 
-    <!-- Camera setup (AR.js integrated) -->
-    <a-camera 
-      position="0 0 0" 
-      look-controls="enabled: true;" 
-      active="true">
-    </a-camera>
+    <!-- Camera -->
+    <a-camera></a-camera>
   </a-scene>
 </body>
 </html>
