--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Video Source -->
     <a-assets>
-      <video id="video" autoplay loop="true" src="assets/tunicates.mp4" crossorigin="anonymous"></video>
+      <video id="video" autoplay loop="true" src="https://lukewelsh.github.io/PHMA/tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
 
     <!-- Camera -->
