--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Passthrough AR with Video</title>
+  <!-- A-Frame latest version -->
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js/aframe/build/aframe-ar.js"></script>
+  <!-- AR.js latest compatible version -->
+  <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js@2.4.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
-    <!-- Marker-based AR with Hiro Marker -->
+  <a-scene embedded arjs>
+    <!-- Marker-based AR using Hiro marker -->
     <a-marker preset="hiro">
       <!-- Video Plane that will appear when marker is detected -->
       <a-video 
         src="#video" 
-        position="0 0.5 -2" 
+        position="0 1 -3" 
         rotation="0 0 0" 
         width="4" 
         height="2.25">
@@ -24,6 +26,7 @@
 
     <!-- Video Source -->
     <a-assets>
+      <!-- Video is hosted at the URL -->
       <video id="video" autoplay loop="true" src="https://lukewelsh.github.io/PHMA/tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
 
