--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Passthrough AR with Video</title>
-  <!-- A-Frame latest version -->
+  <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <!-- AR.js latest compatible version -->
+  <!-- AR.js -->
   <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js@2.4.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <!-- AR Scene -->
-  <a-scene embedded arjs>
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR using Hiro marker -->
     <a-marker preset="hiro">
-      <!-- Video Plane that will appear when marker is detected -->
+      <!-- Video Plane -->
       <a-video 
         src="#video" 
         position="0 1 -3" 
@@ -24,7 +24,7 @@
       </a-video>
     </a-marker>
 
-    <!-- Video Source -->
+    <!-- Video Asset -->
     <a-assets>
       <video id="video" autoplay loop="true" src="https://lukewelsh.github.io/PHMA/tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
