--- a/index.html
+++ b/index.html
@@ -4,15 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Passthrough AR with Video</title>
-  <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <!-- AR.js -->
-  <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js@2.4.0/aframe/build/aframe-ar.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@2.4.0/aframe/build/aframe-ar.js"></script>
+
+  <style>
+    .arjs-loader {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.8);
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .arjs-loader div {
+      text-align: center;
+      font-size: 1.25em;
+      color: white;
+    }
+  </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-  <!-- AR Scene -->
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <!-- Marker-based AR using Hiro marker -->
+<body style="margin: 0px; overflow: hidden;">
+  <!-- Loader -->
+  <div class="arjs-loader">
+    <div>Loading, please wait...</div>
+  </div>
+
+  <a-scene
+    embedded
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    renderer="logarithmicDepthBuffer: true;">
+    <!-- Hiro Marker-based AR -->
     <a-marker preset="hiro">
       <!-- Video Plane -->
       <a-video 
@@ -24,7 +50,7 @@
       </a-video>
     </a-marker>
 
-    <!-- Video Asset -->
+    <!-- Video Source -->
     <a-assets>
       <video id="video" autoplay loop="true" src="https://lukewelsh.github.io/PHMA/tunicates.mp4" crossorigin="anonymous"></video>
     </a-assets>
@@ -32,5 +58,6 @@
     <!-- Camera -->
     <a-camera></a-camera>
   </a-scene>
+
 </body>
 </html>
