--- a/index.html
+++ b/index.html
@@ -3,68 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Passthrough AR with Video</title>
-
-  <!-- Latest A-Frame version -->
+  <title>AR.js Test</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-
-  <!-- Latest AR.js version -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
-
-  <style>
-    .arjs-loader {
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: rgba(0, 0, 0, 0.8);
-      z-index: 9999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .arjs-loader div {
-      text-align: center;
-      font-size: 1.25em;
-      color: white;
-    }
-  </style>
 </head>
-<body style="margin: 0px; overflow: hidden;">
-  <!-- Loader -->
-  <div class="arjs-loader">
-    <div>Loading, please wait...</div>
-  </div>
-
-  <a-scene
-    embedded
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
-    <!-- Hiro Marker-based AR -->
+<body style="margin: 0; overflow: hidden;">
+  <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+    <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Video Plane -->
-      <a-video 
-        src="#video" 
-        position="0 1 -3" 
-        rotation="0 0 0" 
-        width="4" 
-        height="2.25">
-      </a-video>
+      <!-- 3D Model to appear on marker -->
+      <a-box position="0 0.5 0" color="blue"></a-box>
     </a-marker>
 
-    <!-- Video Source -->
-    <a-assets>
-      <video id="video" autoplay loop="true" src="https://lukewelsh.github.io/PHMA/tunicates.mp4" crossorigin="anonymous"></video>
-    </a-assets>
-
-    <!-- Camera with permissions -->
-    <a-camera 
-      position="0 0 0" 
-      look-controls="enabled: true;" 
-      wasd-controls="enabled: false;" 
-      pinch-zoom="enabled: false;"></a-camera>
+    <!-- Camera -->
+    <a-camera></a-camera>
   </a-scene>
-
 </body>
 </html>
