--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js Test</title>
+  <title>AR.js with Video</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
@@ -11,8 +11,8 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- 3D Model to appear on marker -->
-      <a-box position="0 0.5 0" color="blue"></a-box>
+      <!-- Video Plane that will appear when marker is detected -->
+      <a-video src="https://lukewelsh.github.io/PHMA/tunicates.mp4" position="0 1 -3" width="4" height="2.25"></a-video>
     </a-marker>
 
     <!-- Camera -->
