--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
       <!-- Video Plane that will appear when marker is detected -->
-      <a-video src="https://lukewelsh.github.io/PHMA/tunicates.mp4" position="0 1 -3" width="4" height="2.25"></a-video>
+      <a-video 
+        src="https://lukewelsh.github.io/PHMA/tunicates.mp4" 
+        autoplay="true" 
+        loop="true"
+        position="0 0 0" 
+        width="1.5" 
+        height="1.5">
+      </a-video>
     </a-marker>
 
     <!-- Camera -->
