--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         src="https://lukewelsh.github.io/PHMA/tunicates.mp4" 
         autoplay="true" 
         loop="true"
+        muted="true" 
+        playsinline="true"
         position="0 0 0" 
         width="1.5" 
         height="1.5">
