--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
-    <!-- Marker-based AR (Hiro) -->
+    <!-- Marker-based AR -->
     <a-marker preset="hiro">
-      <!-- Video Plane that will appear when marker is detected -->
-      <a-video 
-        src="https://lukewelsh.github.io/PHMA/tunicates.mp4" 
-        autoplay="true" 
-        loop="true"
-        muted="true" 
-        playsinline="true"
-        position="0 0 0" 
-        width="1.5" 
-        height="1.5">
-      </a-video>
+      <!-- Video that will appear when the marker is detected -->
+      <a-assets>
+        <video id="video" autoplay loop="true" muted playsinline>
+          <source src="https://lukewelsh.github.io/PHMA/tunicates.mp4" type="video/mp4">
+        </video>
+      </a-assets>
+
+      <!-- Video plane showing up with the marker -->
+      <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
     </a-marker>
 
     <!-- Camera -->
