--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+  <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" id="scene">
     <!-- Marker-based AR -->
     <a-marker preset="hiro">
       <!-- Video that will appear when the marker is detected -->
@@ -19,11 +19,25 @@
       </a-assets>
 
       <!-- Video plane showing up with the marker -->
-      <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
+      <a-video id="videoPlane" src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
     </a-marker>
 
     <!-- Camera -->
     <a-camera></a-camera>
   </a-scene>
+
+  <script>
+    // Add event listener to start video on tap for mobile devices
+    document.getElementById('scene').addEventListener('click', function () {
+      var video = document.getElementById('video');
+      var videoPlane = document.getElementById('videoPlane');
+
+      // Check if the video is not already playing
+      if (video.paused) {
+        video.play();  // Play the video on tap
+        videoPlane.setAttribute('visible', true);  // Show the video plane
+      }
+    });
+  </script>
 </body>
 </html>
