--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
     </a-marker>
 
-    <!-- Camera -->
+    <!-- Camera, necessary for AR passthrough -->
     <a-camera></a-camera>
   </a-scene>
 </body>
