--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AR.js with Video</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+  <!-- Minimal loader until AR content is initialized -->
+  <div id="loader" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 20px; color: white; z-index: 9999;">
+    Loading AR... Please grant camera access.
+  </div>
+
+  <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" renderer="logarithmicDepthBuffer: true;">
     <!-- Marker-based AR -->
     <a-marker preset="hiro">
-      <!-- Video that will appear when the marker is detected -->
       <a-assets>
         <video id="video" autoplay loop="true" muted playsinline>
           <source src="https://lukewelsh.github.io/PHMA/tunicates.mp4" type="video/mp4">
@@ -25,5 +29,19 @@
     <!-- Camera, necessary for AR passthrough -->
     <a-camera></a-camera>
   </a-scene>
+
+  <script>
+    // Check for permission and initialize AR.js scene
+    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+      navigator.mediaDevices.getUserMedia({ video: true })
+        .then(function(stream) {
+          document.getElementById('loader').style.display = 'none';  // Hide loader once the camera is ready
+        })
+        .catch(function(error) {
+          alert('Camera permission denied or not available.');
+          console.error(error);
+        });
+    }
+  </script>
 </body>
 </html>
