--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js Test</title>
+  <title>AR.js with Video</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
@@ -11,8 +11,16 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- 3D Model to appear on marker -->
-      <a-box position="0 0.5 0" color="blue"></a-box>
+      <!-- Video that will appear when the marker is detected -->
+      <a-assets>
+        <!-- Replace this with the hosted MP4 version of the video -->
+        <video id="video" autoplay loop="true" muted playsinline>
+          <source src="tunicates.mp4" type="video/mp4">
+        </video>
+      </a-assets>
+
+      <!-- Video plane showing up with the marker -->
+      <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
     </a-marker>
 
     <!-- Camera -->
