--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js with Video</title>
+  <title>TUNICATES</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
@@ -11,15 +11,15 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Video that will appear when the marker is detected -->
+      <!-- Define the video asset -->
       <a-assets>
         <video id="video" autoplay loop="true" muted playsinline>
           <source src="tunicates.mp4" type="video/mp4">
         </video>
       </a-assets>
 
-      <!-- Video plane showing up with the marker -->
-      <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
+      <!-- Use a plane to show the video, making sure it is visible in the scene -->
+      <a-plane position="0 0 0" rotation="0 0 0" width="2" height="1.5" material="src: #video; shader: flat;"></a-plane>
     </a-marker>
 
     <!-- Camera -->
