--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <a-marker preset="hiro">
       <!-- Video that will appear when the marker is detected -->
       <a-assets>
-        <!-- Video file in the same directory as index.html -->
+        <!-- Use the direct URL of the video -->
         <video id="video" autoplay loop="true" muted playsinline>
-          <source src="tunicates.mp4" type="video/mp4">
+          <source src="https://lukewelsh.github.io/PHMA/tunicates.mp4" type="video/mp4">
+          Your browser does not support the video tag.
         </video>
       </a-assets>
 
