--- a/index.html
+++ b/index.html
@@ -3,25 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js with Video</title>
+  <title>AR.js Test - Blue Cube</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
-    <!-- Marker-based AR -->
+    <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Video that will appear when the marker is detected -->
-      <a-assets>
-        <!-- Use the direct URL of the video -->
-        <video id="video" autoplay loop="true" muted playsinline>
-          <source src="https://lukewelsh.github.io/PHMA/tunicates.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </a-assets>
-
-      <!-- Video plane showing up with the marker -->
-      <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
+      <!-- Simple blue cube to test marker detection -->
+      <a-box position="0 0.5 0" rotation="0 45 0" color="blue"></a-box>
     </a-marker>
 
     <!-- Camera -->
