--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tunicates</title>
+  <title>AR.js with Webpage</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
@@ -11,20 +11,19 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Video to appear when the marker is detected -->
-      <a-assets>
-        <video id="video" autoplay loop="true" muted playsinline>
-          <source src="https://lukewelsh.github.io/PHMA/tunicates.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </a-assets>
-
-      <!-- Video plane showing up with the marker -->
-      <a-video src="#video" position="0 0 0" width="2" height="2"></a-video>
+      <!-- Embedding a webpage as an iframe -->
+      <a-plane position="0 0.5 0" rotation="0 0 0" width="2" height="1.5" color="white">
+        <a-entity geometry="primitive: plane; width: 2; height: 1.5" material="shader: html; target: #webpage"></a-entity>
+      </a-plane>
     </a-marker>
 
     <!-- Camera -->
     <a-camera></a-camera>
   </a-scene>
+
+  <!-- Webpage to be embedded as an iframe -->
+  <script id="webpage" type="text/html">
+    <iframe src="https://www.miniaqua.org" width="100%" height="100%" frameborder="0"></iframe>
+  </script>
 </body>
 </html>
