--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Embedding a webpage as an iframe -->
-      <a-plane position="0 0.5 0" rotation="0 0 0" width="2" height="1.5" color="white">
-        <a-entity geometry="primitive: plane; width: 2; height: 1.5" material="shader: html; target: #webpage"></a-entity>
+      <!-- Embedding webpage -->
+      <a-plane position="0 0.5 0" width="2" height="1.5" color="white">
+        <!-- Using iframe to load webpage -->
+        <a-entity geometry="primitive: plane; width: 2; height: 1.5"
+                  material="shader: html; target: #webpage"></a-entity>
       </a-plane>
     </a-marker>
 
     <!-- Camera -->
     <a-camera></a-camera>
-  </a-scene>
 
-  <!-- Webpage to be embedded as an iframe -->
-  <script id="webpage" type="text/html">
-    <iframe src="https://www.miniaqua.org" width="100%" height="100%" frameborder="0"></iframe>
-  </script>
+    <!-- Webpage as HTML -->
+    <a-assets>
+      <a-asset-item id="webpage" src="https://miniaqua.org" type="html"></a-asset-item>
+    </a-assets>
+  </a-scene>
 </body>
 </html>
