--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Webpage as HTML -->
     <a-assets>
-      <a-asset-item id="webpage" src="https://miniaqua.org" type="html"></a-asset-item>
+      <a-asset-item id="webpage" src="https://www.example.com" type="html"></a-asset-item>
     </a-assets>
   </a-scene>
 </body>
