--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Embedding webpage -->
+      <!-- Plane to embed the website -->
       <a-plane position="0 0.5 0" width="2" height="1.5" color="white">
-        <!-- Using iframe to load webpage -->
-        <a-entity geometry="primitive: plane; width: 2; height: 1.5"
-                  material="shader: html; target: #webpage"></a-entity>
+        <!-- Embedding iframe of the webpage -->
+        <a-entity geometry="primitive: plane; width: 2; height: 1.5" material="shader: html; target: #webpage"></a-entity>
       </a-plane>
     </a-marker>
 
