--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js with money</title>
+  <title>AR.js with Blue Cube</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
@@ -11,20 +11,12 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR (Hiro) -->
     <a-marker preset="hiro">
-      <!-- Plane to embed the website -->
-      <a-plane position="0 0.5 0" width="2" height="1.5" color="white">
-        <!-- Embedding iframe of the webpage -->
-        <a-entity geometry="primitive: plane; width: 2; height: 1.5" material="shader: html; target: #webpage"></a-entity>
-      </a-plane>
+      <!-- Blue cube that will appear when the marker is detected -->
+      <a-box position="0 0.5 0" rotation="0 45 0" color="blue"></a-box>
     </a-marker>
 
     <!-- Camera -->
     <a-camera></a-camera>
-
-    <!-- Webpage as HTML -->
-    <a-assets>
-      <a-asset-item id="webpage" src="https://www.example.com" type="html"></a-asset-item>
-    </a-assets>
   </a-scene>
 </body>
 </html>
