--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js with 3D Model</title>
+  <title>AR.js with Video</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.0/aframe/build/aframe-ar.js"></script>
 </head>
@@ -11,13 +11,15 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker-based AR -->
     <a-marker preset="hiro">
-      <!-- 3D Model (GLB format) -->
-      <a-entity 
-        gltf-model="https://cdn.jsdelivr.net/gh/aframevr/aframe/examples/assets/rocket/rocket.gltf"
-        scale="0.5 0.5 0.5"
-        position="0 0 0"
-        rotation="0 0 0">
-      </a-entity>
+      <!-- Video that will appear when the marker is detected -->
+      <a-assets>
+        <video id="video" autoplay loop="true" muted playsinline>
+          <source src="https://lukewelsh.github.io/PHMA/tunicates.mp4" type="video/mp4">
+        </video>
+      </a-assets>
+
+      <!-- Plane to display video -->
+      <a-video src="#video" position="0 0 0" width="1.5" height="1.5"></a-video>
     </a-marker>
 
     <!-- Camera -->
