--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- Plane with video texture -->
 		<a-plane position='0 0.5 0' rotation="270 0 0 " width="2" height="1.5">
 			<!-- Use the provided video URL -->
-			<a-video src="https://lukewelsh.github.io/PHMA/tunicates.mp4" autoplay="true" loop="true" muted="true" position="0 0 0" width="2" height="1.5"></a-video>
+			<a-video src="https://lukewelsh.github.io/PHMA/tunicates.mp4" autoplay="true" loop="false" muted="false" position="0 0 0" width="2" height="1.5"></a-video>
 		</a-plane>
 
 		<!-- AR Marker Camera -->
