--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: url('ocean.jpg') no-repeat center center fixed;
+            background: url('ocean.png') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
