--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebAR Brine Shrimp</title>
+<!-- Link to Google Fonts for Cormorant Garamond -->
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
+        /* Apply Cormorant Garamond to the body and other elements */
         body {
+            font-family: 'Cormorant Garamond', Georgia, serif;
             margin: 0;
             overflow: hidden;
-            background: url('ocean.png') no-repeat center center fixed;
+            background: url('images/ocean.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
