--- a/index.html
+++ b/index.html
@@ -4,68 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebAR Brine Shrimp</title>
-
-    <!-- Link to Google Fonts for Cormorant Garamond -->
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-
     <style>
-        /* Set video to fill the background */
-        video.background-video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1; /* Send the video behind content */
-        }
-
-        /* Apply Cormorant Garamond to the body and other elements */
         body {
-            font-family: 'Cormorant Garamond', Georgia, serif;
             margin: 0;
             overflow: hidden;
-            background-color: #000; /* Fallback background color */
+            background: url('ocean.jpg') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            font-family: 'Cormorant Garamond', Georgia, serif;
         }
-
         .container {
             position: relative;
             width: 90%;
             max-width: 600px;
             text-align: center;
-            z-index: 1; /* Make sure content stays on top of video */
         }
-
-        /* Resize the species image */
         .species-image {
-            width: 80%; /* Adjusted size to fit content area */
-            max-width: 300px; /* Keep a maximum width */
-            height: auto;
+            width: 100%;
+            max-width: 300px;
             margin-bottom: 20px;
         }
-
         .button {
-            display: block;
+            display: inline-block;
             background: rgba(255, 255, 255, 0.8);
             border: none;
-            padding: 10px;
-            margin: 5px;
+            padding: 10px 20px;
+            margin: 10px 5px;
             font-size: 16px;
             cursor: pointer;
             border-radius: 10px;
             transition: transform 0.2s, background 0.3s;
+            text-align: center;
         }
-
         .button:hover {
-            background: rgba(0, 167, 168, 0.9);
+            background: rgba(0, 150, 255, 0.9);
             transform: scale(1.1);
         }
-
-        /* Info card style */
         .info-card {
             display: none;
             position: fixed;
@@ -79,11 +56,9 @@
             text-align: center;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
         }
-
         .info-card h2 {
             margin-top: 0;
         }
-
         .info-card button {
             background: #ff0000;
             color: white;
@@ -96,15 +71,8 @@
     </style>
 </head>
 <body>
-
-    <!-- Background Video -->
-    <video class="background-video" autoplay loop muted>
-        <source src="ocean.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
     <div class="container">
-        <img src="artemia_salina.png" alt="Brine Shrimp" class="species-image">
+        <img src="species_placeholder.png" alt="Brine Shrimp" class="species-image">
         <button class="button" onclick="showInfo('Introduction')">Introduction</button>
         <button class="button" onclick="showInfo('Habitat & Range')">Habitat & Range</button>
         <button class="button" onclick="showInfo('Lifespan & Growth')">Lifespan & Growth</button>
