--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             "Habitat & Range": "Found in high-salinity environments like the Great Salt Lake and salt flats worldwide.",
             "Lifespan & Growth": "Brine shrimp live up to a few months reaching adulthood in as little as 8 days, growing to about 1 cm long.",
             "Role in the Ecosystem": "Essential food for fish and filter feeders; their cysts are a key ingredient in aquaculture. At the aquarium we feed cultured Artemia to sea stars, sea cucumbers, anemones, scallops, capelin, jellyfish, and lumpfish.",
-            "Taxonomy": "Domain: Eukaryota<br>Kingdom: Animalia<br>Phylum: Arthropoda<br>Class: Branchiopoda<br>Order: Anostraca<br>Family: Artemiidae<br>Genus: Artemia"
+            "Taxonomy": "Domain: Eukaryota<br>Kingdom: Animalia<br>Phylum: Arthropoda<br>Class: Branchiopoda<br>Order: Anostraca<br>Family: Artemiidae<br>Genus: Artemia<br>Species: A. salina"
         };
 
         // Show Info Card
