--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
     <img src="PHMA.png" alt="Logo" class="logo">
     <div class="container">
-        <img src="species_placeholder.png" alt="Brine Shrimp" class="species-image">
+        <img src="artemia_salina.png" alt="Brine Shrimp" class="species-image">
         <button class="button" onclick="showInfo('Introduction')">Introduction</button>
         <button class="button" onclick="showInfo('Habitat & Range')">Habitat & Range</button>
         <button class="button" onclick="showInfo('Lifespan & Growth')">Lifespan & Growth</button>
